<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_key">sort</string>
    <string name="sort_by_popularity">Sort by popularity</string>
    <string name="sort_by_top_rated">Sort by top rated</string>
    <string name="show_favourites">Show favourites</string>
    <string name="pref_sort_by_popularity">popular</string>
    <string name="pref_sort_by_top_rated">top_rated</string>
    <string name="pref_sort_by_favourite">favourite</string>
    <string name="message_no_connection_available">There is no mReviewList available it appears that there is no connection</string>
    <string name="no_favourite_data">It appears you haven\'t added any movies to favourite yet</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="details_title_reviews">Reviews</string>
    <string name="details_title_trailers">Trailers</string>
    <string name="details_title_overview">Overview</string>
    <string name="action_share">Share</string>
</resources>
