<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".detail.DetailsFragment">


    <include layout="@layout/details_movie_card"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/details_title_overview"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/detail_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/detail_title_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/details_title_trailers"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/details_trailer_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/detail_title_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/details_title_reviews"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/details_review_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
</LinearLayout>
